--- a/webpro/src/main/webapp/css/public.css
+++ b/webpro/src/main/webapp/css/public.css
@@ -1,18 +1,34 @@
 @charset "UTF-8";
 
-	form{
-		border : 1px solid blue;
-		margin : 30px;	
-		padding : 30px;
-		width : 50%;
-	}
-	
-	label{
+div {
+	width: 100%;
+	height: 200px;
+	border: 1px solid red;
+	background: yellow;
+}
+
+pre {
+	border: 1px dotted blue;
+	background: skyblue;
+	margin: 10px;
+	padding: 10px;
+	font-size: 1.2em;
+	height: auto;
+}
+
+form {
+	border: 1px solid blue;
+	margin: 30px;
+	padding: 30px;
+	width: 50%;
+}
+
+label {
 	/* 인라인요소에 크기 조절 
 		display : inline(크기 조절 불가) block(줄바뀜)
 		inline-block : 줄이 바뀌지 않으면서 크기 조절 가능 
 	*/
-		display : inline-block;
-		width : 100px;
-		height : 40px;
-	}
+	display: inline-block;
+	width: 100px;
+	height: 40px;
+}
