--- a/webpro/src/main/webapp/css/public.css
+++ b/webpro/src/main/webapp/css/public.css
@@ -2,9 +2,11 @@
 
 div {
 	width: 100%;
-	height: 200px;
+	height: auto;
 	border: 1px solid red;
-	background: yellow;
+	/*background: yellow;*/
+	background-image: linear-gradient(45deg, yellow, pink); 
+	margin: 3px;
 }
 
 pre {
@@ -17,7 +19,7 @@ pre {
 }
 
 form {
-	border: 1px solid blue;
+	border: 1px solid rgb(214, 122, 124);
 	margin: 30px;
 	padding: 30px;
 	width: 50%;
@@ -31,4 +33,21 @@ label {
 	display: inline-block;
 	width: 100px;
 	height: 40px;
+}
+
+.box div {
+	margin: 10px;
+	padding: 5px;
+	border: 1px dotted orange;
+	height: auto;
+	background: #dadab2;
+}
+
+.box input[type=button] {
+	margin: 5px 50px;
+	width: 60px;
+	height: 40px;
+	background: blue;
+	color: white;
+	border-radius: 20px;
 }
