--- a/webpro/src/main/webapp/css/public.css
+++ b/webpro/src/main/webapp/css/public.css
@@ -5,7 +5,7 @@ div {
 	height: auto;
 	border: 1px solid red;
 	/*background: yellow;*/
-	background-image: linear-gradient(45deg, yellow, pink); 
+	background-image: linear-gradient(45deg, white, orange); 
 	margin: 3px;
 }
 
