--- a/jqpro/src/main/webapp/css/public.css
+++ b/jqpro/src/main/webapp/css/public.css
@@ -40,7 +40,7 @@ label {
 	padding: 5px;
 	border: 1px dotted orange;
 	height: auto;
-	background: #dadab2;
+	background: #FFF0F5;
 }
 
 .box input[type=button], 
